--- a/clubsapp/templates/VnitClubsHome.html
+++ b/clubsapp/templates/VnitClubsHome.html
@@ -6,13 +6,14 @@
 
 {% include "homeheader.html" %}
       <meta charset="utf-8">
-      <title>Clubs at VNIT</title>
+      <title>Student Portal</title>
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
       <!-- Favicon -->
       <!-- Standard -->
-      <link rel="shortcut icon" href="{% static 'IMG/icon.png">
+{#      <!--link rel="shortcut icon" href="{% static 'IMG/icon.png' %} "-->#}
       <!-- Retina iPad Touch Icon-->
+
       <link rel="apple-touch-icon" sizes="144x144" href="{% static 'IMG/icon.png' %}">
       <!-- Retina iPhone Touch Icon-->
       <link rel="apple-touch-icon" sizes="114x114" href="{% static 'IMG/icon.png' %}">
