--- a/clubsapp/templates/clubAdmin.html
+++ b/clubsapp/templates/clubAdmin.html
@@ -16,14 +16,19 @@
 {% load staticfiles %}
 
 {% include "headercontent.html" %}
+<div class="container">
+    <div class="admin-login" style="background: #fff;">
+    <h1 style="text-align: center; margin: 40px 20px; font-size: 30px;">Club Admin Login</h1>
+    <p style="color:red; text-align: center; font-size: 20px; margin: 10px;">{{ message }}</p>
 
-<h1>Login Authentication here:</h1>
-<p>{{ message }}</p>
-<form method="post" action="{% url 'editForm' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <br><br>
-    <input type="submit" value="Login">
-</form>
+    <form method="post" action="{% url 'editForm' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <br><br>
+        <input type="submit" class="btn" value="Login" style="background: #181F45!important;color: #fff;">
+    </form>
+    </div>
+</div>
+{% include "footer.html" %}
 </body>
 </html>
