--- a/portalapp/templates/homeheader.html
+++ b/portalapp/templates/homeheader.html
@@ -14,7 +14,7 @@
   <meta name="keywords" content="Student Portal VNIT Nagpur, Student Portal VNIT,Student Portal vnit, VNIT Nagpur, VNIT">
 <meta http-equiv="Pragma" content="no-cache" />
  <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="rgb(24,31,69)")
+<meta name="theme-color" content="rgb(24,31,69)")>
 <!-- Script for Loader image -->
 
 
@@ -29,7 +29,9 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- 
+ <!-- Favicon -->
+<!-- Standard -->
+<link rel="shortcut icon" href="{% static 'IMG/icon1.png' %} ">
 <!-- Glyphicons -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" media="screen" href="{% static 'CSS/bootstrap.min.css' %}">
