--- a/portalapp/templates/headercontent.html
+++ b/portalapp/templates/headercontent.html
@@ -225,6 +225,14 @@ x="{{open_modal1}}"
 	{
 		$("#myforgotModal").modal('show'); 	
 	}
+	if(x==5)
+	{
+		$("#myforgotModal").modal('show');
+	}
+	if(x==6)
+	{
+		$("#myforgotModalClub").modal('show');
+	}
 	
 	
 register_success="{{register_success}}"
