--- a/static/CSS/shar.css
+++ b/static/CSS/shar.css
@@ -194,3 +194,133 @@ visibility:hidden;
 	transition: 1s;
 }
 
+/*Admin Login Clubs*/
+
+.admin-login{
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: #f1f1f1;
+  padding: 40px;
+  width:60%;
+	margin: 40px 0px;
+	position:relative;
+	display:block;
+	left:20%;
+	transition: box-shadow .15s ease;
+}
+.admin-login:hover {
+  box-shadow: 0 37.125px 70px -12.125px rgba(0,0,0,0.4);
+}
+
+
+
+.errorlist{
+	text-align:left;
+	text-transform:capitalize;
+	list-style:none;
+	padding:0 !important;
+	margin-top:30px;
+	margin-bottom:-10px;
+	color:red;
+}
+
+.edit-form{
+	background: #fff;
+	padding: 40px;
+	border-radius: 5px;
+	transition: box-shadow .15s ease;
+	width:80%;
+	position:relative;
+	display:block;
+	left:10%;
+	margin: 50px 0px;
+}
+.edit-h2{
+	text-align: center;
+	margin-top: 20px;
+	font-size: 25px;
+
+}
+.edit-h2{
+	text-align: center;
+	font-size: 18px;
+}
+
+.edit-p{
+	margin: 16px;
+	color: red;
+	margin-top: 20px;
+}
+
+.edit-id{
+	color:#000;
+	font-size: 18px;
+
+}
+.edit-button-group{
+	width:50%;
+}
+.edit-btn{
+	background: #181F45;
+	color:#fff;
+	padding: 10px;
+	margin-top: 10px;
+	border-radius: 3px;
+
+}
+/*.edit-flex{*/
+	/*float: right;*/
+	/*display: flex;*/
+/*}*/
+.edit-form:hover {
+  box-shadow: 0 37.125px 70px -12.125px rgba(0,0,0,0.4);
+}
+
+
+@media only screen and (max-width: 420px) {
+
+  .admin-login{
+    width: 100%;
+    left:0%;
+  }
+	.edit-h2{
+		font-size: 20px;
+	}
+	.edit-h3,.edit-id{
+		font-size: 16px;
+		/*text-align: center;*/
+
+	}
+	.edit-button-group{
+	width:50%;
+	}
+	.edit-form{
+		width: 100%;
+		left:0%;
+	}
+	.edit-form form{
+		width: 100%;
+		left:0%;
+	}
+	.edit-button-group{
+		width:100%;
+	}
+
+}
+
+
+/*Animation For EXP*/
+table{
+	transition: box-shadow .55s ease;
+	transition: transform .45s ease;
+	margin-bottom: 30px !important;
+}
+table:hover{
+	box-shadow: 0 37.125px 70px -12.125px rgba(0,0,0,0.3);
+	/*margin-bottom: 50px !important;*/
+	transform: scale(1.02,1.02);
+
+}
+.table td{
+	padding: 15px 18px !important;
+}
